# test_linux_cp

./: .pre-commit-config.yaml  README.md  pyproject.toml
docs/: functional.md
test_linux_cp/: dir_structure.py
tests/: conftest.py  test_directory_copying.py  test_multiple_files_copying.py  test_single_file_copying.py  test_single_flag_a.py  test_single_flag_backup.py  test_single_flag_n.py  test_syntax.py
