[tool.poetry]
name = "test-linux-cp"
version = "0.1.0"
description = ""
authors = ["Andrii Borovyi <andrii.borovyi@gmail.com>"]
readme = "README.md"
packages = [{include = "test_linux_cp"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.3.2"
pre-commit = "^3.3.3"
black = "^23.3.0"

[tool.pytest]
testpaths = ["tests"]

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
